--- a/.github/workflows/deploy_website.yml
+++ b/.github/workflows/deploy_website.yml
@@ -27,5 +27,7 @@ jobs:
         uses: actions/setup-node@v2-beta
         with:
           node-version: 12
+      - name: Install Surge
+        run: npm install -g surge
       - name: Run Surge
         run: surge ./ project1Alishba.surge.sh --token ${{secrets.SURGE_TOKEN}}
